# Eavesdrop

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: workflow.yaml
core/: whisper.py
