[project]
name = "eavesdrop"
version = "1.2.0"
description = "Discord Bot that transcribes voice messages and media attachments."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "environs>=15.0.1",
    "hikari-arc>=2.3.0",
    "loguru>=0.7.3",
    "loguru-discord>=2.1.0",
    "niquests>=3.18.8",
    "uvloop>=0.22.1 ; sys_platform != 'win32'",
]

[dependency-groups]
dev = [
    "ruff>=0.15.13",
    "ty>=0.0.37",
]

[tool.ruff]
fix = true
show-fixes = true

[tool.ruff.format]
docstring-code-format = true
line-ending = "lf"
skip-magic-trailing-comma = true

[tool.ruff.lint]
select = ["I", "D"]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.ruff.lint.isort]
split-on-trailing-comma = false
